<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:gravity="center"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/lg_accountName"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text"
            android:textColor="@color/white"
            android:background="@drawable/login_edittext_background"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingStart="20dp"/>

        <EditText
            android:id="@+id/lg_password"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@drawable/login_edittext_background"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/loginbtn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/login_btn"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/lg_signup_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signUpHint"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@null"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>